starrs/jellyseerr/resources/jellyseerr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyseerr
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  serviceName: jellyseerr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
      labels:
        name: jellyseerr
        app: jellyseerr
        part-of: starrs
    spec:
      containers:
        - name: jellyseerr
          image: jellyseerr-image ***REMOVED*** controlled by kustomization.yaml
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 5055
              hostPort: 5055
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
      securityContext:
        runAsUser: 0
        runAsGroup: 210101
        fsGroup: 210101
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "storage-fast"
        resources:
          requests:
            storage: 1Gi
