starrs/jellyseerr/resources/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: jellyseerr
  name: jellyseerr
spec:
  ports:
    - name: "jellyseerr-5055"
      port: 5055
      protocol: TCP
      targetPort: 5055
  selector:
    app: jellyseerr
